--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -15,6 +15,12 @@ $colour-map: ( // Creates variables to be used in my map.
     nav-txt          : #FFF,
     nav-icon-hv      : #FFF,
     nav-software-dd  : #526781,
+    nav-it-dd        : #286ABD,
+    nav-digital-dd   : #25A25A,
+    nav-telecoms-dd  : #BC2C28,
+    nav-web-dd       : #79539A,
+    nav-security-dd  : #DE093F,
+    nav-training-dd  : #A3331D,
     banner-txt       : #FFF,
     banner-btn-hvr   : #E80A42,
     os-btn-txt       : #FFF,
