--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,6 @@ h3 {
 }
 
 .container {
-  position: relative;
   margin-right: auto;
   margin-left: auto;
   margin-bottom: auto;
@@ -226,6 +225,7 @@ h3 {
 }
 
 .nav-bar {
+  position: relative;
   display: none;
   width: 100%;
   background-color: #333645;
@@ -235,40 +235,14 @@ h3 {
     display: block;
   }
 }
+.nav-bar ul {
+  list-style: none;
+  padding: 0;
+}
 
 .nav-list {
   margin: 0 0;
   padding: 0;
-}
-.nav-list a {
-  height: 100%;
-  width: 100%;
-  padding: 19px 0;
-  text-align: center;
-  text-decoration: none;
-  list-style: none;
-  color: #FFF;
-}
-.nav-list a:hover .nav-software-icon {
-  color: #FFF;
-}
-.nav-list a:hover .nav-it-icon {
-  fill: #FFF;
-}
-.nav-list a:hover .nav-digital-icon {
-  fill: #FFF;
-}
-.nav-list a:hover .nav-telecoms-icon {
-  color: #FFF;
-}
-.nav-list a:hover .nav-web-icon {
-  color: #FFF;
-}
-.nav-list a:hover .nav-security-icon {
-  fill: #FFF;
-}
-.nav-list a:hover .nav-training-icon {
-  fill: #FFF;
 }
 .nav-list span {
   height: 26px;
@@ -276,19 +250,224 @@ h3 {
   margin-bottom: 8px;
 }
 
+.nav-box {
+  height: 100%;
+  text-align: center;
+  text-decoration: none;
+  color: #FFF;
+}
+
+.nav-content {
+  font-size: 1.125rem;
+  line-height: 1;
+  width: 100%;
+  height: 100%;
+  padding: 19px 5px;
+  text-transform: uppercase;
+}
+.nav-content small {
+  font-size: 0.625rem;
+  line-height: 1;
+  text-transform: uppercase;
+}
+
 .nav-software-box {
   position: relative;
 }
-.nav-software-box .nav-dropdown {
+
+.dd-triangle {
   display: none;
   position: absolute;
-  top: 100%;
+  content: "";
+  width: 0px;
+  height: 0px;
+  border-style: solid;
+  border-width: 34px 67px 0 67px;
+  z-index: 3;
+}
+@media (min-width: 1260px) {
+  .dd-triangle {
+    border-width: 34px 84px 0 84px;
+  }
+}
+
+.dd-software-triangle {
+  border-color: #67809F transparent transparent transparent;
+}
+
+.dd-it-triangle {
+  border-color: #4183D7 transparent transparent transparent;
+}
+
+.dd-digital-triangle {
+  border-color: #2ECC71 transparent transparent transparent;
+}
+
+.dd-telecoms-triangle {
+  border-color: #D64541 transparent transparent transparent;
+}
+
+.dd-web-triangle {
+  border-color: #926FB1 transparent transparent transparent;
+}
+
+.dd-security-triangle {
+  border-color: #F62459 transparent transparent transparent;
+}
+
+.dd-training-triangle {
+  border-color: #CE4125 transparent transparent transparent;
+}
+
+.dd-title {
+  font-size: 2rem;
+  font-weight: 500;
+}
+
+.nav-dropdown {
+  display: none;
+  padding: 35px 0 50px 0;
+  color: #FFF;
+}
+.nav-dropdown li {
+  font-size: 1.2rem;
+  padding: 12px 15px 12px 0;
+}
+.nav-dropdown a {
+  text-decoration: none;
+  color: #FFF;
+}
+.nav-dropdown a:hover {
+  text-decoration: underline;
+}
+
+.nav-software, .nav-it, .nav-digital, .nav-telecoms, .nav-web, .nav-security, .nav-training {
+  width: 100%;
+}
+
+.nav-software:hover {
+  background-color: #67809F;
+}
+.nav-software:hover .nav-software-icon {
+  color: #FFF;
+}
+.nav-software:hover .nav-software-dropdown {
+  display: block;
+  position: absolute;
   left: 0;
-  width: 100vw;
+  width: 100%;
   z-index: 2;
   background-color: #526781;
 }
-.nav-software-box:hover .nav-dropdown {
+.nav-software:hover .dd-software-triangle {
+  display: block;
+}
+
+.nav-it:hover {
+  background-color: #4183D7;
+}
+.nav-it:hover .nav-it-icon {
+  fill: #FFF;
+}
+.nav-it:hover .nav-it-dropdown {
+  display: block;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  background-color: #286ABD;
+}
+.nav-it:hover .dd-it-triangle {
+  display: block;
+}
+
+.nav-digital:hover {
+  background-color: #2ECC71;
+}
+.nav-digital:hover .nav-digital-icon {
+  fill: #FFF;
+}
+.nav-digital:hover .nav-digital-dropdown {
+  display: block;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  background-color: #25A25A;
+}
+.nav-digital:hover .dd-digital-triangle {
+  display: block;
+}
+
+.nav-telecoms:hover {
+  background-color: #D64541;
+}
+.nav-telecoms:hover .nav-telecoms-icon {
+  color: #FFF;
+}
+.nav-telecoms:hover .nav-telecoms-dropdown {
+  display: block;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  background-color: #BC2C28;
+}
+.nav-telecoms:hover .dd-telecoms-triangle {
+  display: block;
+}
+
+.nav-web:hover {
+  background-color: #926FB1;
+}
+.nav-web:hover .nav-web-icon {
+  color: #FFF;
+}
+.nav-web:hover .nav-web-dropdown {
+  display: block;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  background-color: #79539A;
+}
+.nav-web:hover .dd-web-triangle {
+  display: block;
+}
+
+.nav-security:hover {
+  background-color: #F62459;
+}
+.nav-security:hover .nav-security-icon {
+  fill: #FFF;
+}
+.nav-security:hover .nav-security-dropdown {
+  display: block;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  background-color: #DE093F;
+}
+.nav-security:hover .dd-security-triangle {
+  display: block;
+}
+
+.nav-training:hover {
+  background-color: #CE4125;
+}
+.nav-training:hover .nav-training-icon {
+  fill: #FFF;
+}
+.nav-training:hover .nav-training-dropdown {
+  display: block;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  background-color: #A3331D;
+}
+.nav-training:hover .dd-training-triangle {
   display: block;
 }
 
@@ -296,6 +475,10 @@ h3 {
   font-size: 1.25rem;
   height: 28px;
   width: 28px;
+}
+
+.fa-laptop {
+  font-size: 1.6rem;
 }
 
 .nav-software-icon {
@@ -326,62 +509,25 @@ h3 {
   fill: #CE4125;
 }
 
-.nav-software:hover {
-  background-color: #67809F;
-}
-
-.nav-it:hover {
-  background-color: #4183D7;
-}
-
-.nav-digital:hover {
-  background-color: #2ECC71;
-}
-
-.nav-telecoms:hover {
-  background-color: #D64541;
-}
-
-.nav-web:hover {
-  background-color: #926FB1;
-}
-
-.nav-security:hover {
-  background-color: #F62459;
-}
-
-.nav-training:hover {
-  background-color: #CE4125;
-}
-
-.nav-bar .container {
-  display: flex;
-}
-
 .nav-list {
   display: flex;
-  flex-direction: row;
-  flex: 1;
 }
-.nav-list .nav-content {
+
+.nav-content {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.nav-dropdown {
-  display: flex;
-  flex-direction: column;
-}
-
-.nav-dd-row {
+.dd-row {
   display: flex;
   flex-direction: row;
 }
 
-.nav-dd-box {
+.dd-column {
   display: flex;
   flex-direction: column;
+  flex: 0 0 35%;
 }
 
 .banner {
