--- a/css/style.css
+++ b/css/style.css
@@ -142,11 +142,20 @@ h3 {
 }
 
 .img-header {
-  width: 253.59px;
-  height: 44.16px;
+  min-width: 253.59px;
+  min-height: 44.16px;
 }
 
-.search-bar-container {
+.sb-content {
+  width: 565px;
+}
+@media (min-width: 1260px) {
+  .sb-content {
+    width: 717px;
+  }
+}
+
+.search-bar-container-1 {
   width: 100%;
   transition: none;
   background-color: rgba(0, 0, 0, 0.1);
@@ -156,7 +165,13 @@ h3 {
   color: #555;
 }
 
-.search-bar {
+.search-bar-container-2 {
+  width: 100%;
+  height: 56px;
+  color: #555;
+}
+
+.search-bar-1 {
   margin-right: -40px;
   display: inline-block;
   font-size: 14px;
@@ -168,17 +183,46 @@ h3 {
   background-color: transparent;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
-.search-bar:focus {
+.search-bar-1:focus {
   outline: none;
   box-shadow: none;
 }
 
+.search-bar-2 {
+  margin-right: 0;
+  font-size: 14px;
+  line-height: 1.4px;
+  height: 100%;
+  width: 174px;
+  padding: 10px 15px;
+  border: 1px solid #E5E5E5;
+  border-color: #CCC;
+  border-radius: 0;
+}
+.search-bar-2:focus {
+  border: 1px solid #CCC;
+  border-radius: 0;
+  outline: none;
+  border-color: #5BC0DE;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(91, 192, 222, 0.6);
+}
+@media (min-width: 1260px) {
+  .search-bar-2 {
+    width: 100%;
+    margin-left: 20px;
+  }
+}
+
 .header-btn {
-  margin-left: 24px;
+  margin-left: 20px;
   border-radius: 4px;
+  border: 1px solid #333645;
   fill: #FFF;
   background-color: #333645;
   cursor: pointer;
+}
+.header-btn:hover {
+  background-color: #22242e;
 }
 
 .header-svg {
@@ -187,14 +231,123 @@ h3 {
   width: 47px;
 }
 
-.search-icon {
+.search-icon-1 {
   padding: 0 10px;
   color: #333645;
   background: transparent;
   border: none;
 }
-.search-icon i {
+.search-icon-1 i {
   font-size: 20px;
+}
+
+.search-icon-2 {
+  width: 63px;
+  padding: 0 10px;
+  color: #FFF;
+  background-color: #999AA2;
+  border: 1px solid #999AA2;
+  border-radius: 0 3px 3px 0;
+}
+.search-icon-2 i {
+  font-size: 23px;
+}
+.search-icon-2:hover {
+  cursor: pointer;
+  background-color: #7E808A;
+}
+@media (min-width: 1260px) {
+  .search-icon-2 {
+    width: 83px;
+  }
+}
+
+.search-icon-3 {
+  display: none;
+  width: 63px;
+  height: 56px;
+  padding: 0 10px;
+  margin-left: 20px;
+  color: #FFF;
+  background-color: #999AA2;
+  border: 1px solid #999AA2;
+  border-radius: 3px;
+}
+@media (min-width: 992px) {
+  .search-icon-3 {
+    display: block;
+  }
+}
+@media (min-width: 1260px) {
+  .search-icon-3 {
+    display: none;
+  }
+}
+.search-icon-3 i {
+  font-size: 23px;
+}
+.search-icon-3:hover {
+  cursor: pointer;
+  background-color: #7E808A;
+}
+
+.mouse-icon {
+  display: none;
+  font-size: 1.125rem;
+  line-height: 46px;
+  width: 141px;
+  height: 56px;
+  padding: 0 10px;
+  text-transform: uppercase;
+  color: #FFF;
+  background-color: #4183D7;
+  border: 1px solid #999AA2;
+  border-radius: 3px;
+}
+@media (min-width: 992px) {
+  .mouse-icon {
+    display: block;
+  }
+}
+.mouse-icon i {
+  font-size: 23px;
+}
+.mouse-icon span {
+  margin-left: 10px;
+}
+.mouse-icon:hover {
+  cursor: pointer;
+  background-color: #2665B5;
+}
+
+.plane-icon {
+  display: none;
+  font-size: 1.125rem;
+  line-height: 46px;
+  width: 149px;
+  height: 56px;
+  padding: 0 10px;
+  margin-left: 20px;
+  text-transform: uppercase;
+  color: #FFF;
+  background-color: #999AA2;
+  border: 1px solid #999AA2;
+  border-radius: 3px;
+}
+@media (min-width: 992px) {
+  .plane-icon {
+    display: block;
+  }
+}
+.plane-icon i {
+  font-size: 23px;
+}
+.plane-icon span {
+  margin-left: 10px;
+}
+.plane-icon:hover {
+  cursor: pointer;
+  background-color: #7E808A;
 }
 
 .phone-icon {
@@ -206,6 +359,11 @@ h3 {
 .phone-icon:hover {
   border-bottom-color: currentColor;
 }
+@media (min-width: 768px) {
+  .phone-icon {
+    display: none;
+  }
+}
 
 .header-row {
   display: flex;
@@ -214,14 +372,42 @@ h3 {
   align-items: center;
 }
 
-.search-bar-container {
+.search-bar-container-1 {
   display: flex;
   flex-direction: row;
 }
+@media (min-width: 768px) {
+  .search-bar-container-1 {
+    display: none;
+  }
+}
 
-.phone-and-button {
+.search-bar-container-2 {
+  display: none;
+}
+@media (min-width: 768px) {
+  .search-bar-container-2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+  }
+}
+@media (min-width: 992px) {
+  .search-bar-container-2 {
+    display: none;
+  }
+}
+@media (min-width: 1260px) {
+  .search-bar-container-2 {
+    width: 300px;
+    display: flex;
+  }
+}
+
+.sb-content {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
 }
 
 .nav-bar {
@@ -339,6 +525,9 @@ h3 {
 }
 .nav-dropdown a:hover {
   text-decoration: underline;
+}
+.nav-dropdown .container {
+  padding: 0;
 }
 
 .nav-software, .nav-it, .nav-digital, .nav-telecoms, .nav-web, .nav-security, .nav-training {
