--- a/css/style.css
+++ b/css/style.css
@@ -214,10 +214,13 @@ h3 {
 }
 
 .header-btn {
+  display: block;
+  height: 56px;
+  width: 63px;
   margin-left: 20px;
   border-radius: 4px;
+  padding: 5px 14px;
   border: 1px solid #333645;
-  fill: #FFF;
   background-color: #333645;
   cursor: pointer;
 }
@@ -225,10 +228,12 @@ h3 {
   background-color: #22242e;
 }
 
-.header-svg {
+.burger-line {
   display: block;
-  height: 50px;
-  width: 47px;
+  height: 4px;
+  width: 100%;
+  margin: 6px 0;
+  background-color: #FFF;
 }
 
 .search-icon-1 {
@@ -1467,6 +1472,16 @@ a.strong-paragraph:hover {
   margin-bottom: 15px;
   padding-top: 30px;
 }
+@media (min-width: 992px) {
+  .block-ln h3 {
+    margin-bottom: 20px;
+  }
+}
+@media (min-width: 1260px) {
+  .block-ln h3 {
+    margin-bottom: 15px;
+  }
+}
 .block-ln span {
   display: none;
   margin-left: 5px;
@@ -1480,6 +1495,17 @@ a.strong-paragraph:hover {
   margin-top: 0;
   margin-bottom: 25px;
   color: #666;
+}
+@media (min-width: 992px) {
+  .block-ln p {
+    margin: 30px 0;
+  }
+}
+@media (min-width: 1260px) {
+  .block-ln p {
+    margin-top: 0;
+    margin-bottom: 25px;
+  }
 }
 @media (min-width: 768px) {
   .block-ln {
