--- a/scss/layouts/_latestnews.scss
+++ b/scss/layouts/_latestnews.scss
@@ -63,6 +63,14 @@
         margin-top: 0;
         margin-bottom: 15px;
         padding-top: 30px;
+
+        @include mq(l) {
+            margin-bottom: 20px;
+        }
+
+        @include mq(xl) {
+            margin-bottom: 15px;
+        }
     }
 
     span {
@@ -79,6 +87,15 @@
         margin-top: 0;
         margin-bottom: 25px;
         @include color(ln-p-color, color);
+
+        @include mq(l) {
+            margin: 30px 0;
+        }
+
+        @include mq(xl) {
+            margin-top: 0;
+            margin-bottom: 25px;
+        }
     }
 
     @include mq(m) {
