--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -47,6 +47,7 @@ $colour-map: ( // Creates variables to be used in my map.
     ln-title-color   : #333645,
     ln-btn-txt-color : #FFF,
     ln-p-color       : #666,
+    logo-txt-color   : #fff,
     footer-txt-color : #FFF,
     main-txt-color   : #333645,
     background-1     : #333645,
