--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@ textarea:not([rows]) {
 body {
   letter-spacing: 0.4px;
   margin: 0;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -1714,11 +1715,20 @@ a.strong-paragraph:hover {
 
 .slider-section {
   padding: 50px 0;
-  overflow-x: hidden;
+}
+.slider-section h4 {
+  font-size: 1.125rem;
+  margin: 0;
+}
+.slider-section p {
+  font-size: 0.8125rem;
+  line-height: 1.375rem;
+}
+.slider-section strong {
+  font-weight: bold;
 }
 
 .slider-logo {
-  position: relative;
   padding: 0 30px;
   filter: grayscale(100%);
 }
@@ -1738,6 +1748,132 @@ a.strong-paragraph:hover {
   width: 100%;
 }
 
+.popup {
+  display: none;
+  position: absolute;
+  width: 280px;
+  bottom: 0;
+  left: 0;
+  padding: 20px;
+  margin: 0 auto 100px;
+  text-align: center;
+  z-index: 2;
+  color: #fff;
+  background-color: #333645;
+}
+
+.logo-triangle {
+  display: none;
+  position: absolute;
+  content: "";
+  width: 0px;
+  height: 0px;
+  bottom: 67px;
+  border-style: solid;
+  border-width: 34px 35px 0 35px;
+  z-index: 3;
+  border-color: #333645 transparent transparent transparent;
+}
+
+.beat {
+  position: relative;
+}
+.beat:hover .beat-popup {
+  display: block;
+}
+.beat:hover .beat-triangle {
+  display: block;
+  left: 24px;
+}
+
+.survey {
+  position: relative;
+}
+.survey:hover .survey-popup {
+  display: block;
+}
+.survey:hover .survey-triangle {
+  display: block;
+  left: 40%;
+}
+
+.guides {
+  position: relative;
+}
+.guides:hover .guides-popup {
+  display: block;
+}
+.guides:hover .guides-triangle {
+  display: block;
+  left: 20%;
+}
+
+.sweetzy {
+  position: relative;
+}
+.sweetzy:hover .sweetzy-popup {
+  display: block;
+}
+.sweetzy:hover .sweetzy-triangle {
+  display: block;
+  left: 40%;
+}
+
+.howes {
+  position: relative;
+}
+.howes:hover .howes-popup {
+  display: block;
+}
+.howes:hover .howes-triangle {
+  display: block;
+  left: 40%;
+}
+
+.girls {
+  position: relative;
+}
+.girls:hover .girls-popup {
+  display: block;
+}
+.girls:hover .girls-triangle {
+  display: block;
+  left: 40%;
+}
+
+.ashcroft {
+  position: relative;
+}
+.ashcroft:hover .ashcroft-popup {
+  display: block;
+}
+.ashcroft:hover .ashcroft-triangle {
+  display: block;
+  left: 40%;
+}
+
+.one {
+  position: relative;
+}
+.one:hover .one-popup {
+  display: block;
+}
+.one:hover .one-triangle {
+  display: block;
+  left: 40%;
+}
+
+.searles {
+  position: relative;
+}
+.searles:hover .searles-popup {
+  display: block;
+}
+.searles:hover .searles-triangle {
+  display: block;
+  left: 40%;
+}
+
 .slider-section {
   display: flex;
   gap: 1rem;
@@ -1745,6 +1881,19 @@ a.strong-paragraph:hover {
 }
 
 .slider-logo {
+  display: flex;
+  flex: 0 0 auto;
+}
+
+.beat,
+.survey,
+.guides,
+.sweetzy,
+.howes,
+.girls,
+.ashcroft,
+.one,
+.searles {
   display: flex;
   flex: 0 0 auto;
 }
