--- a/scss/layouts/_layout.scss
+++ b/scss/layouts/_layout.scss
@@ -37,6 +37,7 @@
 body { 
     letter-spacing: .4px;
     margin: 0; // Sets the top, bottom, left, and right margins of an element to 0.
+    overflow-x: hidden;
 }
 
 h1 {
