--- a/scss/layouts/_logos.scss
+++ b/scss/layouts/_logos.scss
@@ -5,8 +5,8 @@
 //////// Layout ////////
 
 .slider-section {
-    position: relative;
     padding: 50px 0;
+    overflow-x: clip;
 
     h4 {
         font-size: 1.125rem;
@@ -34,7 +34,7 @@
 
 .slider-1 {
     display: block;
-    max-height: 50px;
+    height: 50px;
     width: 100%;
 }
 
@@ -65,9 +65,9 @@
     display: none;
     position: absolute;
     content: "";
-    width: 0px;
-    height: 0px;
-    bottom: 67px;
+    bottom: 16px;
+    left: 50%;
+    transform: translateX(-50%);
     border-style: solid;
     border-width: 34px 35px 0 35px;
     border-color: #333645 transparent transparent transparent;
@@ -220,6 +220,27 @@
         .busseys-triangle {
             display: block;
         }
+    }
+}
+
+//////// Buttons ////////
+
+.logo-btn {
+    color: white;
+    display: flex;
+    font-size: 20px; 
+    padding: 5px 15px; 
+    border-radius: 6px; 
+    border: 1px solid transparent;
+    align-items: center;
+    text-transform: uppercase;
+    text-decoration: none;
+    
+
+
+    i {
+        margin-left: 12px;
+        margin-right: -4px;
     }
 }
 
