--- a/scss/layouts/_welcometo.scss
+++ b/scss/layouts/_welcometo.scss
@@ -5,23 +5,23 @@
 //////// Layout ////////
 
 .welcome-to {
-    @include color(background-1); // Created a colour using a mixin.
-    @include color(wt-txt-color, color); // Created a colour using a mixin.
+    @include color(background-1); 
+    @include color(wt-txt-color, color); 
 
     h2 {
-        margin-bottom: 40px; // Sets the margin area on the bottom of an element.
+        margin-bottom: 40px; 
         margin-top: 0;
     }
 
     p {
-        line-height: 1.875rem; // Used to set the distance between lines of text.
+        line-height: 1.875rem; 
         margin-top: 0;
-        margin-bottom: 25px; // Sets the margin area on the bottom of an element.
+        margin-bottom: 25px; 
     }
 
     a {
-        text-decoration: none; // Used to remove underline from a hyperlink.
-        @include color(wt-txt-color, color); // Created a colour using a mixin.
+        text-decoration: none; 
+        @include color(wt-txt-color, color); 
     }
 }
 
@@ -41,29 +41,29 @@ a.strong-paragraph {
 }
 
 .strong-title {
-        font-size: 2.25rem; // Sets the size of the font.
-        font-weight: 600; // The “value” placed on my font that will determine how bold or light my text will appear.
+        font-size: 2.25rem; 
+        font-weight: 600; 
     }
 
 .strong-paragraph {
-    font-weight: 600; // The “value” placed on my font that will determine how bold or light my text will appear.
+    font-weight: 600; 
 }
 
 .welcome-to-col-1 {
     p {
-        font-size: 1rem; // Sets the size of the font.
+        font-size: 1rem; 
     }
 }
 
 .client-quote {
-    font-weight: 600; // The “value” placed on my font that will determine how bold or light my text will appear.
-    font-size: 1.3rem; // Sets the size of the font.
-    font-style: italic; // To show content/text in italic style
+    font-weight: 600; 
+    font-size: 1.3rem; 
+    font-style: italic; 
 }
 
 .client-quote-author {
-    font-weight: 600; // The “value” placed on my font that will determine how bold or light my text will appear.
-    @include color(client, color); // Created a colour using a mixin.
+    font-weight: 600; 
+    @include color(client, color); 
 }
 
 .client {
@@ -73,10 +73,25 @@ a.strong-paragraph {
 
 //////// Buttons ////////
 
+.welcome-to-btn {
+    display: inline-flex; 
+    font-size: 20px; 
+    padding: 10px 30px; 
+    border-radius: 6px; 
+    border: 1px solid transparent; 
+    text-transform: uppercase; 
+    align-items: center;
+
+    i {
+        margin-left: 12px;
+        margin-right: -4px;
+    }
+}
+
 .welcome-to-buttons a:first-child {
-    width: 270.17px; // Sets an element's width.
-    height: 57px; // Sets an element's height.
-    margin-bottom: 17px; // Sets the margin area on the bottom of an element.
+    width: 270.17px; 
+    height: 57px; 
+    margin-bottom: 17px; 
     margin-right: 6px;
 
     @include mq(l) {
@@ -90,13 +105,13 @@ a.strong-paragraph {
 }
 
 .welcome-to-btn-1 {
-    width: 225.86px; // Sets an element's width.
-    height: 57px; // Sets an element's height.
-    margin-bottom: 50px; // Sets the margin area on the bottom of an element.
-    @include color(wt-btn-bg-1); // Created a colour using a mixin.
+    width: 225.86px; 
+    height: 57px; 
+    margin-bottom: 50px; 
+    @include color(wt-btn-bg-1); 
 
     &:hover {
-        @include color(wt-btn-bg-hv-1); // Created a colour using a mixin.
+        @include color(wt-btn-bg-hv-1); 
     }
 
     @include mq(l) {
@@ -105,25 +120,25 @@ a.strong-paragraph {
 }
 
 .welcome-to-btn-2 {
-    width: 263.19px; // Sets an element's width.
-    height: 55px; // Sets an element's height.
-    margin-top: 20px; // Sets the margin area on the top of an element.
-    margin-right: 8px; // Sets the margin area on the right of an element.
-    @include color(wt-btn-bg-2); // Created a colour using a mixin.
+    width: 263.19px; 
+    height: 55px; 
+    margin-top: 20px; 
+    margin-right: 8px; 
+    @include color(wt-btn-bg-2); 
 
     &:hover {
-        @include color(wt-btn-bg-hv-2); // Created a colour using a mixin.
+        @include color(wt-btn-bg-hv-2); 
     }
 }
 
 .welcome-to-btn-3 {
-    width: 294.05px; // Sets an element's width.
-    height: 55px; // Sets an element's height.
-    margin-top: 20px; // Sets the margin area on the top of an element.
-    @include color(wt-btn-bg-3); // Created a colour using a mixin.
+    width: 294.05px; 
+    height: 55px; 
+    margin-top: 20px; 
+    @include color(wt-btn-bg-3); 
 
     &:hover {
-        @include color(wt-btn-bg-hv-3); // Created a colour using a mixin.
+        @include color(wt-btn-bg-hv-3); 
     }
 }
 
@@ -133,7 +148,7 @@ a.strong-paragraph {
     width: 46.84px;
     height: 51px;
     margin-bottom: 25px;
-    @include color(star, fill); // Created a colour using a mixin.
+    @include color(star, fill); 
 }
 
 .star {
@@ -143,8 +158,8 @@ a.strong-paragraph {
 //////// Flexbox Layout ////////
 
 .welcome-to-row {
-    display: flex; // Makes it into a flex container.
-    flex-direction: column; // Displays flex items in a column.
+    display: flex; 
+    flex-direction: column; 
 
     @include mq(l) {
         flex-direction: row;
@@ -160,17 +175,17 @@ a.strong-paragraph {
 }
 
 .welcome-to-col-1 { 
-    display: flex; // Makes it into a flex container and a flex item.
-    flex-direction: column; // Displays flex items in a column.
+    display: flex;
+    flex-direction: column;
 }
 
 .welcome-to-col-2 {
-    display: flex; // Makes it into a flex container and a flex item.
-    flex-direction: column; // Displays flex items in a column.
+    display: flex; 
+    flex-direction: column; 
 
     h2 {
-       margin-top: 0; // Sets the margin area on the top of an element.
-       align-self: flex start; // The flex items will be positioned at the beginning of the flex container.
+       margin-top: 0; 
+       align-self: flex start; 
     }
 }
 
