--- a/scss/layouts/_banner.scss
+++ b/scss/layouts/_banner.scss
@@ -48,7 +48,7 @@
     height: 100%;
     content: "";
     position: absolute;
-    background: rgba(0, 0, 0, 0.6);
+    background: linear-gradient(270deg, transparent 25%, #000);
     z-index: 1;
     }
 
