--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -10,67 +10,69 @@ $breakpoints: ( // Creates variables to be used in my map.
 );
 
 $colour-map: ( // Creates variables to be used in my map.
-    hdr-sb                    : #555,
-    hdr-burger-line           : #FFF,
-    hdr-sb-2                  : #FFF,
-    hdr-logo-2                : #FFF,
-    hdr-logo-2-bg             : #999AA2,
-    hdr-logo-2-bg-hvr         : #7E808A,
-    hdr-border-color          : #5BC0DE,
-    hdr-btn-lines             : #FFF,
-    hdr-btn-hvr               : #22242e,
-    hdr-mouse-bg              : #4183D7,
-    hdr-mouse-hvr             : #2665B5,
-    nav-txt                   : #FFF,
-    nav-icon-hv               : #FFF,
-    nav-software-dd           : #526781,
-    nav-it-dd                 : #286ABD,
-    nav-digital-dd            : #25A25A,
-    nav-telecoms-dd           : #BC2C28,
-    nav-web-dd                : #79539A,
-    nav-security-dd           : #DE093F,
-    nav-training-dd           : #A3331D,
-    banner-txt                : #FFF,
-    banner-btn-hvr            : #E80A42,
-    os-btn-txt                : #FFF,
-    os-hov-effect             : #FFF,
-    os-icon                   : #FFF,
-    wt-txt-color              : #fff,
-    wt-btn-bg-1               : #272936,
-    wt-btn-bg-hv-1            : #121318,
-    wt-btn-bg-2               : #4387F6,
-    wt-btn-bg-hv-2            : #166AF4,
-    wt-btn-bg-3               : #00B67B,
-    wt-btn-bg-hv-3            : #009B69,
-    client                    : #A3A8AC,
-    star                      : #FFA500,
-    ln-title-color            : #333645,
-    ln-btn-txt-color          : #FFF,
-    ln-p-color                : #666,
-    logo-txt-color            : #fff,
-    logo-btn-digital          : #00B67B,
-    logo-btn-digital-hover    : #009B69,
-    logo-btn-it               : #4387F6,
-    logo-btn-it-hover         : #166AF4,
-    logo-btn-web              : #926fb1,
-    logo-btn-web-hover        : #7e57a0,
-    footer-txt-color          : #FFF,
-    main-txt-color            : #333645,
-    background-1              : #333645,
-    background-2              : #323544,
-    background-3              : #212330,
-    software                  : #67809F,
-    software-2                : #F7B322,
-    it                        : #4183D7,
-    digital                   : #2ECC71,
-    telecoms                  : #D64541,
-    web                       : #926FB1,
-    security                  : #F62459,
-    training                  : #CE4125,
-    facebook                  : #3B5998,
-    linkedin                  : #0077B5,
-    x                         : #00ACED,
-    instagram                 : #D93175
+  body-background           : #fff,
+  sidebar-text-color        : #fff,
+  hdr-sb                    : #555,
+  hdr-burger-line           : #FFF,
+  hdr-sb-2                  : #FFF,
+  hdr-logo-2                : #FFF,
+  hdr-logo-2-bg             : #999AA2,
+  hdr-logo-2-bg-hvr         : #7E808A,
+  hdr-border-color          : #5BC0DE,
+  hdr-btn-lines             : #FFF,
+  hdr-btn-hvr               : #22242e,
+  hdr-mouse-bg              : #4183D7,
+  hdr-mouse-hvr             : #2665B5,
+  nav-txt                   : #FFF,
+  nav-icon-hv               : #FFF,
+  nav-software-dd           : #526781,
+  nav-it-dd                 : #286ABD,
+  nav-digital-dd            : #25A25A,
+  nav-telecoms-dd           : #BC2C28,
+  nav-web-dd                : #79539A,
+  nav-security-dd           : #DE093F,
+  nav-training-dd           : #A3331D,
+  banner-txt                : #FFF,
+  banner-btn-hvr            : #E80A42,
+  os-btn-txt                : #FFF,
+  os-hov-effect             : #FFF,
+  os-icon                   : #FFF,
+  wt-txt-color              : #fff,
+  wt-btn-bg-1               : #272936,
+  wt-btn-bg-hv-1            : #121318,
+  wt-btn-bg-2               : #4387F6,
+  wt-btn-bg-hv-2            : #166AF4,
+  wt-btn-bg-3               : #00B67B,
+  wt-btn-bg-hv-3            : #009B69,
+  client                    : #A3A8AC,
+  star                      : #FFA500,
+  ln-title-color            : #333645,
+  ln-btn-txt-color          : #FFF,
+  ln-p-color                : #666,
+  logo-txt-color            : #fff,
+  logo-btn-digital          : #00B67B,
+  logo-btn-digital-hover    : #009B69,
+  logo-btn-it               : #4387F6,
+  logo-btn-it-hover         : #166AF4,
+  logo-btn-web              : #926fb1,
+  logo-btn-web-hover        : #7e57a0,
+  footer-txt-color          : #FFF,
+  main-txt-color            : #333645,
+  background-1              : #333645,
+  background-2              : #323544,
+  background-3              : #212330,
+  software                  : #67809F,
+  software-2                : #F7B322,
+  it                        : #4183D7,
+  digital                   : #2ECC71,
+  telecoms                  : #D64541,
+  web                       : #926FB1,
+  security                  : #F62459,
+  training                  : #CE4125,
+  facebook                  : #3B5998,
+  linkedin                  : #0077B5,
+  x                         : #00ACED,
+  instagram                 : #D93175
 );
 
 //// mixins ////
